environments/dev/apps/aggregator-ssr-kustomization/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aggregator-ssr
  namespace: aggregator
spec:
  replicas: 2
  template:
    spec:
      containers:
      - name: aggregator-ssr
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 250m
            memory: 256Mi
